--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
     padding: 0;
     margin: 0;
 }
+
 body {
     background-color: black;
 }
@@ -73,7 +74,8 @@ img {
     height: 300px;
     overflow: hidden;
 }
-.options-hidden button{
+
+.options-hidden button {
     display: none;
 }
 
@@ -113,9 +115,10 @@ img {
     font-weight: bolder;
     font-size: 25px;
 }
+
 #winner {
     text-align: center;
-    color: rgb(186, 26, 93);
+    color: rgb(209, 50, 116);
     font-weight: bolder;
     font-size: 30px;
 }
@@ -132,7 +135,17 @@ a {
     padding: 1rem;
     background-color: rgb(65, 145, 202);
     border-radius: 10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Architects Daughter';
     margin-top: 10px;
     border-color: solid rgb(186, 26, 93);
+    color: rgb(186, 26, 93);
+    font-weight: bolder;
+}
+
+#set-name {
+    color: yellow;
+}
+
+.round-score {
+    color: rgb(186, 26, 93)
 }
