--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@ footer {
     background-color: rgb(65, 145, 202);
     padding: 0.25rem;
     width: 100%;
+    text-align: center;
     position: fixed;
     bottom: 0;
-    text-align: center;
 }
 
 
@@ -65,12 +65,6 @@ input {
     border: solid;
 }
 
-#start-game {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 #options {
     background-image: url(img/rock-paper-scissors-neon-icons.png);
     background-position: center;
@@ -79,7 +73,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    height: 260px;
     border: 3px solid yellow;
     border-radius: 5px;
 }
@@ -100,7 +94,7 @@ input {
     background-color: rgb(186, 26, 93);
     height: 200px;
     border-radius: 10px;
-    width: 130px;
+    width: 120px;
     opacity: 20%;
 }
 
@@ -135,6 +129,10 @@ a {
     box-shadow: 5px rgb(186, 26, 93);
     border-radius: 5px;
     padding: 3px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .reset-button {
@@ -154,4 +152,8 @@ a {
 
 .round-score {
     color: rgb(186, 26, 93)
+}
+
+.end-game {
+    display: none;
 }
